# EncodingGuidelines

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ColorPreservation.md  DOCLICENSE.txt  EditorialWorkflow.md  EncodeAv1.md  EncodeDNXHD.md  EncodeHTJ2K.md  EncodeHevc.md  EncodeMJPEG.md  EncodeOpenAPV.md  EncodeProres.md  EncodeSwsScale.md  EncodeVP8.md  EncodeVP9.md  Encodeh264.md  Encoding.md  EncodingMetadata.md  EncodingOverview.md  FfmpegInputs.md  LICENSE  MarkdownNotes.md  OtherFfmpegArgs.md  Quickstart.md  README.md  RGBEncoding.md  Testresults.md  WebColorPreservation.md  _config.yml  compare.html  index.md
ICC/: P3D60.icc  P3D65.icc  P3DCI.icc  README  Rec2020-Rec1886.icc  Rec709-Rec1886.icc  Simplified-sRGB.icc  gamma28.icc  linear.icc  rec2020.icc
docker/: README.md
enctests/: HDR_Encoding.md  README  README.md  config.py  enctest.py  main.py  runtest.sh  utils.py
enctests/playback/: CMakeLists.txt  README.md  codec_test.c  ffmpegplayback.py  playbacktest.py  testplayback.py
gamuttests/: apply-icc2020.py  gamuttest_v001.nk
hdr/: HDR-Calculator.xlsx  HDR-Test_chart_v3.nknc  README  hdr_test.exr  index.html  output_srgb.mov  webgl-player.js
sourceimages/: README.md  bellnuitHDTestchart.tif  bellnuitHDTestchart.tif.yml  chip-chart-1080-16bit-noicc-yuv420p.png.yml  chip-chart-1080-16bit-noicc-yuv420p10le.png.yml  chip-chart-1080-16bit-noicc-yuv422p10le.png.yml  chip-chart-1080-16bit-noicc.png.yml  chip-chart-1080-noicc.png.yml  chromatest_1080.png.yml  generate.sh  generate_chroma.py  radialgrad.png.yml  smptehdbars_10.dpx.yml  smptehdbars_16.png.yml  smptehdbars_8.png.yml  smptehdbars_8_yuv420p.y4m  smptehdbars_8_yuv420p.y4m.yml  smptehdbars_8_yuv422p.y4m  smptehdbars_8_yuv422p.y4m.yml  zoneplate_rgb16.png.yml
tests/: chip-color-test.py  greyramp-rev2.nk  icctest-fulltv.py  icctest-osx.py  icctest-rev-ps-nuke.py  icctest-rev-ps.py  icctest-rev2.py  icctest.py  runall.sh
(+241 files in other folders)
